[package]
name = "websymb"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
input_yew = "0.1.10"
vsymb = { version = "0.1.0", path = "../vsymb" }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
